Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* pkgcore observer api's were heavily gutted and split into observer and
  outputter.  This should enable easier UX integration, while enabling
  our next step towards parallelization.

* pkgcore now tracks and records the originating/source repository
  when installing to the vdb.

* new pkg attribute; source_repository.  This tracks where a package
  originated from- primarily useful for binpkgs and vdb.
  pquery --attr source_repository is how to access it from the CLI.

* pkg_config can now be invoked via:
  pconfig package <target>

* splitdebug no longer runs if the pkg has been split already.

* arbitrary exceptions during merging/unmerging no longer stop the
  merge/unmerge; a traceback is displayed instead.

* large scale conversion of internals to argparse.  Saner parsing namely,
  although it's still a work in progress to make it pretty.

* added initial profile inspection tool; pinspect profiles.

* man pages and docs in general have been converted to sphinx.  Definite
  improvement already, but more to come.

* pmaint copy arguments have changed; check the help, short version,
  it's now sane.

* pkgcore now lives at googlecode; http://pkgcore.googlecode.com/


pkgcore 0.6.6: July 11th, 2011

* make use/useq/usev extremely obnoxious towards offending devs who use them
  in global scope when they're not supposed to.  Pretty much, I'm tired of
  pkgcore being broken for being PMS compliant; as such I'm now pointing
  users loud and clear at the offenders.

* fix traceback in user profile support (/etc/portage/profiles).


pkgcore 0.6.5: Jun 22nd, 2011

* Log an error, rather than throwing an exception when binpkg cache cannot
  be updated.  Needs refinement long term, but for average users, this is
  preferable.

* loosen up pebuild a bit; choose the max version if slot/repo are all the